# postladim

./: .gitignore  README.rst  ruff.toml  setup.cfg
doc/: Makefile
doc/source/: conf.py  format.rst  index.rst  usage.rst
postladim/: __init__.py  cellcount.py  particlefile.py  particleset.py  variable.py
test/: ruff.toml  test_cellcount.py  test_instancevariable.py  test_particlefile.py  test_particleset.py  test_variable.py
