[metadata]

name = postladim
version = 1.0
description = Postprocessing package for LADiM
keywords = oceanography, particle tracking
Home_page = https://github.com/bjornaa/postladim
author = Bjørn Ådlandsvik
author_email = bjorn@imr.no
Classifiers =
    Development Status ::  4 - Beta
    Environment :: Console (Text Based)
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Oceanography

[options]
packages = postladim
python_requires = >=3.9
install_requires =
    numpy
    xarray
